# Summarxiv

./: .dockerignore  .env.sample  .example.env  .gitignore  Dockerfile  LICENSE  README.md  config.json  config.yaml  entry.py  pyproject.toml  requirements.txt  run.sh  summarxiv.py  topic2query.json
.github/workflows/: build_docker.yaml
templates/: block.html  footer.html  prompt.txt
