[project]
name = "summarxiv"
version = "0.1.0"
description = "Daily latest arXiv paper summary digest."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv",
    "requests",
    "schedule",
    "openai",
    "pypdf",
    "pyyaml",
    "litellm>=1.70.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
]
